--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   cached_network_image: ^2.2.0+1
   webview_flutter: ^0.3.22+1
   http: ^0.12.2
+  # Jiffy for timedate conversion
+  jiffy: ^3.0.1   
+  adaptive_theme: ^1.0.0
 
 dev_dependencies:
   flutter_test:
